# splatfacto-env

./: pyproject.toml
splatfactoenv/: splatfactoenv_config.py  splatfactoenv_datamanager.py  splatfactoenv_dataparser.py  splatfactoenv_field.py  splatfactoenv_model.py  splatfactoenv_pipeline.py
