[project]
name = "splatfacto-env"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["splatfactoenv*","splatfactoenv_rgb*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
splatfactoenv = 'splatfactoenv.splatfactoenv_config:splatfactoenv'
splatfactoenv_rgb = 'splatfactoenv.splatfactoenv_config:splatfactoenvrgb'
